# polyLayoutProject

./: AppSettings.cpp  AppSettings.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Items.cpp  Items.hpp  MainWindow.cpp  MainWindow.hpp  VectorDraw.cpp  VectorDraw.ini  VectorDraw_old.hpp  VectorDraw_pch.hpp  View.cpp  View.hpp  Winda.hpp
_bld/VectorDraw_autogen/EWIEGA46WW/: moc_MainWindow.cpp
images/: icons00.txt
